# ws-docflow

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ROADMAP_DEV.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  release.yml
hooks/: check_coverage.py
src/ws_docflow/: __init__.py  cli.py  models.py  parser.py
src/ws_docflow/api/: main.py  routes.py  test_health_metrics.py
src/ws_docflow/cli/: app.py  formatters.py
src/ws_docflow/core/: ports.py
src/ws_docflow/core/domain/: models.py
src/ws_docflow/core/use_cases/: extract_data.py
src/ws_docflow/infra/: logging.py
src/ws_docflow/infra/parsers/: br_dta_extrato_parser.py  br_dta_parser.py
src/ws_docflow/infra/pdf/: pdfplumber_extractor.py
tests/: test_cli.py  test_cli_app.py  test_models.py  test_parser.py  test_parser_extrato.py  test_parser_participantes_totais.py  test_use_case_fallback.py
tests/api/: test_main.py  test_routes.py  test_routes_parse.py
tests/api/core/: test_extract_data_use_case.py
tests/api/infra/: test_pdfplumber_extractor.py
tests/cli/: test_app_json_default.py  test_cli_app_excepts.py  test_cli_app_more.py  test_cli_misc.py  test_formatters_extra.py  test_formatters_json_default.py  test_parse_batch.py  test_parse_out_format.py
